--- a/reason-react/src/index.html
+++ b/reason-react/src/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
+    <link href="./index.css" rel="stylesheet" />
   </head>
   <body>
     <div id="main"></div>
